--- a/client/package.json
+++ b/client/package.json
@@ -39,7 +39,7 @@
     ]
   },
   "devDependencies": {
-    "babel-plugin-macros": "^3.1.0",
+    "babel-plugin-macros": "3.1.0",
     "babel-plugin-styled-components": "^1.13.2"
   }
 }
