--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "engines": {
+    "npm": "6.14.13",
     "node": "14.17.3"
   },
   "cacheDirectories": [
